# AirForce

./: .gitignore  AirForce.sln  AirForce.vcxproj  AirForce.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Drawable.h  House.cpp  Math.cpp  Math.h  Model.cpp  Model.h  ModelViewScene.cpp  ModelViewScene.h  MouseEvent.cpp  MouseEvent.h  OnMouseActionListener.h  OnScreenSizeChangedListener.h  README.md  Terrain.h  Vector3.cpp  Vector3.h  View.cpp  View.h  Window.h  background.tga  exampleFragmentShader.frag  exampleVertexShader.vert
Indine/: ObjImporter.h
Indine/src/: Indine.cpp  stdafx.cpp
Indine/src/importers/: Importer.cpp
headers/FileSystem/: FileReader.h  ObjModelReader.h
headers/math/: CVector3.h
headers/models/: Cube.h  Model.h  Terrain.h
headers/renderers/: Renderer.h
headers/texturing/: TextureManager.h
headers/tga/: tga.c  tga.h
include/: definitions.h  platform_definitions.h
include/exceptions/: Exception.h  IOException.h  OutOfMemoryException.h
resources/interface/: diablo.tga
resources/maps/: ancient_kiev.map  ground.tga  ground_2.tga  ground_3.tga  ground_4.tga  ground_tile.tga
resources/textures/: ground_grass.tga  ground_tile_1.tga  ground_tile_2.tga
src/: Core.cpp  Core.h  Frame.cpp  Frame.h  Renderer.cpp  Screen.cpp  Shader_Loader.cpp  Shader_Loader.h  TextureManager.cpp  main.cpp  resource.h
src/Core/: CVector3.cpp  Shader_Loader.h
src/Debug/: vc120.idb
src/Debug/AirForce.tlog/: AirForce.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  (+6 more)
src/FileSyestem/: ObjModelReader.cpp  ObjModelReader.h
src/FileSystem/: FileReader.cpp  ObjModelReader.cpp
src/GUI/: GUI.cpp  GUI.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h
src/Shaders/: Fragment_Shader.glsl  Vertex_Shader.glsl
src/json/: jsoncpp.cpp
src/math/: CVector3.cpp  Math.cpp
src/model/: Cube.cpp  House.cpp  House.h  Model.cpp  Model.h  Terrain.cpp  Terrain.h
src/platform/: time.cpp
(+24 files in other folders)
